Lab/k8s_with_contrail/lab_exercise/old_doc/old3/ns-user4.yaml
#ns-user.yaml 
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    opencontrail.org/isolation: "true"
    opencontrail.org/fip-pool: "{
      'domain': 'default-domain', 
      'project': 'k8s-ns-user4', 
      'network': 'k8s-vn-external4-pod-network', 
      'name': 'pool-vn-external4'
    }" 
  name: ns-user4
