Lab/k8s_with_contrail/lab_exercise/old_doc/old3/lab3_ingress1.yaml
---
# URL based filtering
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress1
spec:
  rules:
  - http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: service-web-1
            port: 
              number: 8888
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: service-web-2
            port: 
              number: 8888
      - path: /slam
        pathType: Prefix
        backend:
          service:
            name: service-web-4
            port: 
              number: 8888
  defaultBackend:
    service:
      name: service-web-3
      port: 
        number: 8888
