Lab/k8s_with_contrail/lab_exercise/old_doc/old3/lab3_ingress2.yaml
---
# URL based filtering
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress2
spec:
  rules:
  - host: www.vmmlab1.com
    http:
      paths:
      - backend:
          service:
            name: service-web-1
            port: 
              number: 8888
        path: /*
        pathType: Prefix
  - host: www.vmmlab2.com
    http:
      paths:
      - backend:
          service:
            name: service-web-2
            port: 
              number: 8888 
        path: /*
        pathType: Prefix
  defaultBackend:
    service:
      name: service-web-4
      port: 
        number: 8888
